--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PrestigeSchedulesAg</title>
+  <title>Prestige Schedules</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!--favicons-->
+  <link rel="icon" type="image/x-icon" href="../src/assets/images/0.5x/Asset%202@0.5x.png">
+
+<!--icons-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href= "assets/font-awesome-4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
   <app-root></app-root>
