--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href= "assets/font-awesome-4.7.0/css/font-awesome.min.css">
 
+  <!--Font-->
+  <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+
 </head>
 <body>
   <app-root></app-root>
