--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
 
   <!--Font-->
   <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+
 
 </head>
 <body>
