Added homepage components

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Prestige Schedules</title>
+  <title>Sync - Schedules made easy</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!--favicons-->
-  <link rel="icon" type="image/x-icon" href="../src/assets/images/0.5x/Asset%202@0.5x.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 <!--icons-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
